--- a/client/app/components/ToolBar/ToolBar.css
+++ b/client/app/components/ToolBar/ToolBar.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Courgette&display=swap');
 
 
+
+
 /* GENRAL */
 li, button, SearchButton, InsertButton {
   font-family: "Montserrat", sans-serif;
@@ -134,6 +136,32 @@ header {
   background-color:darkolivegreen;
 }
 #locked-reset:active {
+  background-color: darkolivegreen;
+  box-shadow: 0 2px #666;
+  transform: none;
+}
+
+/* GENERARE RANDOM TREE BUTTON */
+#gen {
+  background-color: rgb(37, 192, 26);
+}
+#gen:hover {
+  background-color: rgba(17, 117, 10, 0.6);
+}
+#gen:active {
+  background-color: rgba(7, 66, 3, 0.6);
+  box-shadow: 0 2px #666;
+  transform: translateY(4px);
+}
+
+/* LOCKED GENERATE RANDOM TREE BUTTON */
+#locked-gen {
+  background-color: darkolivegreen;
+}
+#locked-gen:hover {
+  background-color:darkolivegreen;
+}
+#locked-gen:active {
   background-color: darkolivegreen;
   box-shadow: 0 2px #666;
   transform: none;
